test/fails/bad_tags/mult2.lgl
tag a is vec2;

a x = [1., 1.];
vec2->a v2_a = [[1., 1.], [1., 1.]];
a bad = v2_a * x; // Can't upcast x to a vec2